# curachain-2.0

./: .gitignore  Anchor.toml  README.md  package.json
client_interactions/: admin_operations.ts  case_submission.ts  curachain.json  donate_funds_to_1.ts  donate_funds_to_4.ts  generate_keypair.ts  package.json  release_funds_case_1.ts  release_funds_case_4.ts  verify_case1.ts  verify_case4.ts
client_interactions/wallets/: donor1-wallet.json  donor2-wallet.json  donor3-wallet.json  facility1-wallet.json  facility4-wallet.json  patient1-wallet.json  patient2-wallet.json  patient3-wallet.json  patient4-wallet.json  verifier1-wallet.json  verifier2-wallet.json  verifier3-wallet.json  verifier4-wallet.json  verifier5-wallet.json  verifier6-wallet.json
programs/curachain/: Cargo.toml
programs/curachain/src/: lib.rs
programs/curachain/src/instructions/: admin_override_case.rs  close_rejected_case.rs  create_patient_case.rs  donate_funds.rs  init_nft_collection.rs  mint_nft.rs  mod.rs  multisig_operations.rs  release_funds.rs  verifiers_operations.rs  verify_patient_case.rs  view_case_details.rs
programs/curachain/src/states/: accounts.rs  constants.rs  contexts.rs  errors.rs  events.rs
tests/: curachain.ts
